[package]
name = "ingeoking"
version = "0.1.0"
edition = "2024"

[dependencies]
libevent-sys = "0.3.0"
libc = "0.2.172"

[features]
default = ["support-bop-mget", "support-bop-smget", "jhpark-old-smget-interface",
           "scan-command", "multi-notify-io-complete"]
support-bop-mget = []
support-bop-smget = []
jhpark-old-smget-interface = []
scan-command = []
multi-notify-io-complete = []
sasl-dev = []
detect-long-query = []

[lib]
crate-type = ["cdylib"]
